traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:2: error: not found: value getLargeur
  val largeur : Int = getLargeur()
                      ^TraversalDiagonal:3: error: not found: value getHauteur
  val hauteur : Int = getHauteur()
                      ^