traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
  val largeur : Int = getLargeur()
  val hauteur : Int = getHauteur()
  val nbDiag : Int = hauteur + largeur - 1
  var compteur : Int = 0
  var abscisse : Int = 0
  var ordonnee : Int = 0
  while (abscisse < largeur && ordonnee < hauteur) {
  	 
  }
}